--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
     "resolveJsonModule": true,
     "paths": {
       "*": ["node_modules/*"]
-    }
+    },
+    "lib": [
+      "ES2023.Array", "DOM", "ESNext"
+    ]
   },
   "include": ["src/**/*"]
 }
