--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@types/lodash": "^4.17.16",
     "electron-squirrel-startup": "^1.0.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "randomcolor": "^0.6.2"
   }
 }
